Because grammar is important

--- a/app/views/home/vehicles.html.erb
+++ b/app/views/home/vehicles.html.erb
@@ -1,4 +1,4 @@
-<h1>Found <%= @vehicles.size %> connected cars !</h1>
+<h1>Found <%= @vehicles.size %> connected car(s) !</h1>
 <hr/>
 <div style="font-size: x-large">
   <% @vehicles.each do |vehicle|%>
