--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Smartcar Ruby SDK Demo Application</h1>
-<h2>Please navigate to <a href="/login">/login </a></h2>
+<h2>Please navigate to <a href="/login">login page(/login) </a></h2>
